feat(KO & VN translations): check commit description
Translated:
- The SweepStakes Lottery
- An internal error was received.
- All Winners
- Match first %rewardBracket%"
- Match all %rewardBracket%"
- At least one ticket must be purchased"

--- a/apps/web/public/locales/ar-SA.json
+++ b/apps/web/public/locales/ar-SA.json
@@ -2033,7 +2033,7 @@
   "Error connecting, please authorize wallet to access.": "خطأ في الاتصال، يرجى مصادقة المحفظة لأجل الوصول.",
   "Retry": "إعادة المحاولة",
   "Your first step in the DeFi world": "الخطوة الأولى لك في عالم DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "تسمح لك محفظة Web3 بإرسال واستلام الأصول المشفرة مثل البتكوين وBNB وETH وNFT وغيرها.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "تسمح لك محفظة Web3 بإرسال واستلام الأصول المشفرة مثل البتكوين وBNB وETH وNFT وغيرها.",
   "Login using a wallet connection": "تسجيل الدخول باستخدام اتصال المحفظة",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "بدلاً من إعداد حسابات وكلمات مرور جديدة لكل موقع ويب، عليك ببساطة إعداد محفظتك أثناء التنقل وربطها بـ DApps المفضل لك.",
   "Stake Error": "خطأ في الرهن",
