--- a/apps/web/public/locales/bn-BD.json
+++ b/apps/web/public/locales/bn-BD.json
@@ -2035,7 +2035,7 @@
   "Error connecting, please authorize wallet to access.": "সংযোগ করার সময় ত্রুটি, অনুগ্রহ করে ওয়ালেটকে অ্যাক্সেস করার অনুমতি দিন।",
   "Retry": "আবার চেষ্টা করুন",
   "Your first step in the DeFi world": "DeFi জগতে আপনার প্রথম পদক্ষেপ",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Web3 ওয়ালেট আপনাকে বিটকয়েন, BNB, ETH, NFTs এবং আরো অনেক কিছুর মতো ক্রিপ্টো সম্পদ পাঠানোর এবং গ্রহণ করার সুযোগ দেয়।",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Web3 ওয়ালেট আপনাকে বিটকয়েন, BNB, ETH, NFTs এবং আরো অনেক কিছুর মতো ক্রিপ্টো সম্পদ পাঠানোর এবং গ্রহণ করার সুযোগ দেয়।",
   "Login using a wallet connection": "কোনো ওয়ালেট সংযোগ ব্যবহার করে লগইন করুন",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "প্রতিটি ওয়েবসাইটের জন্য নতুন অ্যাকাউন্ট এবং পাসওয়ার্ড সেট আপ করার পরিবর্তে একবারে কেবল আপনার ওয়ালেট সেট আপ করুন এবং এটিকে আপনার প্রিয় DApp-এর সাথে সংযুক্ত করুন৷",
   "Stake Error": "স্ট্যাক-এর ত্রুটি",
