--- a/apps/web/public/locales/de-DE.json
+++ b/apps/web/public/locales/de-DE.json
@@ -2033,7 +2033,7 @@
   "Error connecting, please authorize wallet to access.": "Fehler beim Verbinden, bitte autorisieren Sie das Wallet für den Zugriff.",
   "Retry": "Neu versuchen",
   "Your first step in the DeFi world": "Ihr erster Schritt in die DeFi-Welt",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Mit einem Web3-Wallet können Sie Kryptowährungen wie Bitcoin, BNB, ETH, NFTs und vieles mehr senden und empfangen.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Mit einem Web3-Wallet können Sie Kryptowährungen wie Bitcoin, BNB, ETH, NFTs und vieles mehr senden und empfangen.",
   "Login using a wallet connection": "Anmelden über eine Wallet-Verbindung",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Anstatt für jede Website neue Konten und Passwörter einzurichten, richten Sie Ihr Wallet einfach in einem Rutsch ein und verbinden sie es mit Ihren bevorzugten DApps.",
   "Stake Error": "Fehler beim Einsetzen",
