--- a/apps/web/public/locales/el-GR.json
+++ b/apps/web/public/locales/el-GR.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Σφάλμα σύνδεσης, εξουσιοδοτήστε το πορτοφόλι για πρόσβαση.",
   "Retry": "Επανάληψη",
   "Your first step in the DeFi world": "Το πρώτο σας βήμα στον κόσμο του DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Ένα πορτοφόλι Web3 σας επιτρέπει να στέλνετε και να λαμβάνετε κρυπτονομίσματα όπως bitcoin, BNB, ETH, NFTs και πολλά άλλα.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Ένα πορτοφόλι Web3 σας επιτρέπει να στέλνετε και να λαμβάνετε κρυπτονομίσματα όπως bitcoin, BNB, ETH, NFTs και πολλά άλλα.",
   "Login using a wallet connection": "Είσοδος με σύνδεση πορτοφολιού",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Αντί να δημιουργείτε νέους λογαριασμούς και κωδικούς πρόσβασης για κάθε ιστότοπο, απλά ρυθμίστε το πορτοφόλι σας με μία κίνηση και συνδέστε το με τις αγαπημένες σας εφαρμογές DApps.",
   "Stake Error": "Σφάλμα stake",
