--- a/apps/web/public/locales/en-US.json
+++ b/apps/web/public/locales/en-US.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Error connecting, please authorize wallet to access.",
   "Retry": "Retry",
   "Your first step in the DeFi world": "Your first step in the DeFi world",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.",
   "Login using a wallet connection": "Login using a wallet connection",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.",
   "Stake Error": "Stake Error",
