--- a/apps/web/public/locales/fi-FI.json
+++ b/apps/web/public/locales/fi-FI.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Virhe muodostettaessa yhteyttä, valtuuta lompakko saadaksesi käyttöoikeuden.",
   "Retry": "Yritä uudelleen",
   "Your first step in the DeFi world": "Ensimmäinen askeleesi DeFin maailmassa",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Web3 Walletin avulla voit lähettää ja vastaanottaa kryptovaluuttoja, kuten bitcoinia, BNB:tä, ETH:ta, NFT:itä ja monia muita.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Web3 Walletin avulla voit lähettää ja vastaanottaa kryptovaluuttoja, kuten bitcoinia, BNB:tä, ETH:ta, NFT:itä ja monia muita.",
   "Login using a wallet connection": "Kirjaudu sisään käyttämällä lompakkoyhteyttä",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Sen sijaan, että loisit uuden tilin ja salasanan jokaiselle verkkosivustolle, voit määrittää lompakkosi kerralla ja yhdistää sen käyttämiisi hajautettuihin sovelluksiin.",
   "Stake Error": "Panostusvirhe",
