--- a/apps/web/public/locales/hi-IN.json
+++ b/apps/web/public/locales/hi-IN.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "कनेक्ट करने में त्रुटि, कृपया एक्सेस के लिए वॉलेट को अनुमति दें।",
   "Retry": "फिर कोशिश करें",
   "Your first step in the DeFi world": "DeFi वर्ल्ड में आपकी पहला कदम",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Web3 वॉलेट से आपको क्रिप्टो ऐसेट जैसे बिटकॉइन, BNB, ETH, NFT और बहुत कुछ भेजने और प्राप्त करने की अनुमति मिलती है।",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Web3 वॉलेट से आपको क्रिप्टो ऐसेट जैसे बिटकॉइन, BNB, ETH, NFT और बहुत कुछ भेजने और प्राप्त करने की अनुमति मिलती है।",
   "Login using a wallet connection": "वॉलेट कनेक्शन का उपयोग करके लॉगइन करें",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "प्रत्येक वेबसाइट के लिए नए खाते और पासवर्ड सेटअप करने के बजाय, अपना वॉलेट केवल एक बार में सेटअप करें और इसे अपने पसंदीदा DApps से कनेक्ट करें।",
   "Stake Error": "स्टेक त्रुटि",
