--- a/apps/web/public/locales/hu-HU.json
+++ b/apps/web/public/locales/hu-HU.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Csatlakozási hiba, kérjük, engedélyezze a pénztárcát a hozzáféréshez.",
   "Retry": "Újra próbálkozás",
   "Your first step in the DeFi world": "Első lépése a DeFi világában",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "A Web3 tárca lehetővé teszi, hogy kriptoeszközöket, például bitcoint, BNB-t, ETH-t, NFT-ket és még sok egyebet küldjön és fogadjon.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "A Web3 tárca lehetővé teszi, hogy kriptoeszközöket, például bitcoint, BNB-t, ETH-t, NFT-ket és még sok egyebet küldjön és fogadjon.",
   "Login using a wallet connection": "Bejelentkezés pénztárca-kapcsolat segítségével",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Ahelyett, hogy minden weboldalhoz új fiókokat és jelszavakat hoz létre, egyszerűen beállítja a pénztárcáját egyetlen lépésben, és csatlakoztatja kedvenc DAapps alkalmazásaihoz.",
   "Stake Error": "Hiba a tét feltevésénél",
