--- a/apps/web/public/locales/ja-JP.json
+++ b/apps/web/public/locales/ja-JP.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "接続中のエラー。ウォレットのアクセスを承認してください。",
   "Retry": "再試行",
   "Your first step in the DeFi world": "DeFiの世界での最初の一歩",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Web3ウォレットでは、ビットコイン、BNB、ETH、NTFなどの暗号資産を送受信できます。",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Web3ウォレットでは、ビットコイン、BNB、ETH、NTFなどの暗号資産を送受信できます。",
   "Login using a wallet connection": "ウォレット接続を使ってログイン",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "サイトごとに新しいアカウントとパスワードをセットアップする代わりに、ウォレットを1回セットアップするだけで、お気に入りのDAppに接続できます。",
   "Stake Error": "ステーキングエラー",
