--- a/apps/web/public/locales/nl-NL.json
+++ b/apps/web/public/locales/nl-NL.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Fout tijdens verbinden, autoriseer je wallet voor toegang.",
   "Retry": "Opnieuw proberen",
   "Your first step in the DeFi world": "Je eerste stap in de DeFi-wereld",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Met een Web3-wallet kun je crypto-activa zoals Bitcoin, BNB, ETH, NFT's en nog veel meer verzenden en ontvangen.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Met een Web3-wallet kun je crypto-activa zoals Bitcoin, BNB, ETH, NFT's en nog veel meer verzenden en ontvangen.",
   "Login using a wallet connection": "Log in met een walletverbinding",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "In plaats van voor elke website nieuwe accounts en wachtwoorden in te stellen, stel je gewoon één keer je portemonnee in en verbind je deze met je favoriete DApps.",
   "Stake Error": "Stakefout",
