--- a/apps/web/public/locales/pl-PL.json
+++ b/apps/web/public/locales/pl-PL.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Błąd podczas nawiązywania połączenia, autoryzuj portfel, aby uzyskać dostęp.",
   "Retry": "Ponów próbę",
   "Your first step in the DeFi world": "Twój pierwszy krok w świecie DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Portfel Web3 umożliwia wysyłanie i odbieranie kryptowalut takich jak Bitcoin, BNB, ETH, NFT i wiele innych.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Portfel Web3 umożliwia wysyłanie i odbieranie kryptowalut takich jak Bitcoin, BNB, ETH, NFT i wiele innych.",
   "Login using a wallet connection": "Zaloguj się przy użyciu połączenia z portfelem",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Zamiast tworzyć nowe konta i hasła w każdej witrynie internetowej, wystarczy skonfigurować swój portfel za jednym zamachem i połączyć go z ulubionymi DApps.",
   "Stake Error": "Błąd stakowania",
