--- a/apps/web/public/locales/pt-PT.json
+++ b/apps/web/public/locales/pt-PT.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Erro ao ligar, autorize o acesso à carteira.",
   "Retry": "Tentar novamente",
   "Your first step in the DeFi world": "O seu primeiro passo no mundo DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Uma Carteira Web3 permite enviar e receber ativos de cripto como bitcoin, BNB, ETH, NFTs e vários outros.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Uma Carteira Web3 permite enviar e receber ativos de cripto como bitcoin, BNB, ETH, NFTs e vários outros.",
   "Login using a wallet connection": "Iniciar sessão com uma ligação de carteira",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Em vez de configurar novas contas e palavras-passe para cada site, basta configurar a sua carteira uma vez e ligá-la ao seu DApps favorito.",
   "Stake Error": "Erro de stake",
