--- a/apps/web/public/locales/ru-RU.json
+++ b/apps/web/public/locales/ru-RU.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Ошибка подключения, авторизуйте кошелек для доступа.",
   "Retry": "Повторить попытку",
   "Your first step in the DeFi world": "Ваш первый шаг в мире децентрализованных финансов",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Кошелек Web3 позволяет отправлять и получать такие криптовалютные активы, как биткоины, BNB, ETH, NFT и другие.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Кошелек Web3 позволяет отправлять и получать такие криптовалютные активы, как биткоины, BNB, ETH, NFT и другие.",
   "Login using a wallet connection": "Войдите с помощью подключения кошелька",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Не нужно создавать аккаунты и пароли для каждого сайта — просто настройте кошелек один раз и подключите его к децентрализованным приложениям.",
   "Stake Error": "Ошибка вложения",
