--- a/apps/web/public/locales/sv-SE.json
+++ b/apps/web/public/locales/sv-SE.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Fel vid anslutning, vänligen godkänn plånboken för åtkomst.",
   "Retry": "Försök igen",
   "Your first step in the DeFi world": "Ditt första steg i DeFi-världen",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Med en Web3-plånbok kan du skicka och ta emot kryptotillgångar som bitcoin, BNB, ETH, NFTs och mycket mer.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Med en Web3-plånbok kan du skicka och ta emot kryptotillgångar som bitcoin, BNB, ETH, NFTs och mycket mer.",
   "Login using a wallet connection": "Logga in med en plånboksanslutning",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Istället för att skapa nya konton och lösenord för varje webbplats kan du helt enkelt konfigurera din plånbok på en gång och ansluta den till dina favorit-DApps.",
   "Stake Error": "Investeringsfel",
