--- a/apps/web/public/locales/ta-IN.json
+++ b/apps/web/public/locales/ta-IN.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "இணைப்பதில் பிழை, அணுகுவதற்கு வாலெட்டை அங்கீகரித்திடுங்கள்.",
   "Retry": "மீள்முயற்சி",
   "Your first step in the DeFi world": "DeFi உலகில் உங்கள் முதல் படி",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "நீங்கள் பிட்காயின், BNB, ETH, NFTகள் மற்றும் பல போன்ற க்ரிப்டோ அசெட்களை அனுப்புவதற்கும் பெறுவதற்கும் Web3 வாலெட் வழிசெய்கிறது.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "நீங்கள் பிட்காயின், BNB, ETH, NFTகள் மற்றும் பல போன்ற க்ரிப்டோ அசெட்களை அனுப்புவதற்கும் பெறுவதற்கும் Web3 வாலெட் வழிசெய்கிறது.",
   "Login using a wallet connection": "ஒரு வாலெட் இணைப்பைப் பயன்படுத்தி உள்நுழையவும்",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "ஒவ்வொரு வலைத்தளத்திற்கும் புதிய கணக்குகள் மற்றும் கடவுச்சொற்களை அமைப்பதற்குப் பதிலாக, ஒருமுறை உங்கள் வாலெட்டை அமைத்து, அதை உங்களுக்குப் பிடித்த DApps-உடன் இணைத்தால் போதும்.",
   "Stake Error": "ஸ்டேக் பிழை",
