--- a/apps/web/public/locales/tr-TR.json
+++ b/apps/web/public/locales/tr-TR.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Bağlanırken hata oluştu, lütfen cüzdanın erişmesine izin verin.",
   "Retry": "Yeniden dene",
   "Your first step in the DeFi world": "DeFi dünyasına ilk adımınız",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Bir Web3 Cüzdanı; Bitcoin, BNB, ETH, NFT'ler ve çok daha fazlası gibi kripto varlıkları göndermenize ve almanıza olanak tanır.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Bir Web3 Cüzdanı; Bitcoin, BNB, ETH, NFT'ler ve çok daha fazlası gibi kripto varlıkları göndermenize ve almanıza olanak tanır.",
   "Login using a wallet connection": "Bir cüzdan bağlantısı kullanarak giriş yapın",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Her web sitesi için yeni hesaplar ve şifreler ayarlamak yerine cüzdanınızı tek seferde kurup en sevdiğiniz merkeziyetsiz uygulamalara bağlayın.",
   "Stake Error": "Yatırma Hatası",
