--- a/apps/web/public/locales/zh-CN.json
+++ b/apps/web/public/locales/zh-CN.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "连接错误，请授权钱包访问。",
   "Retry": "重试",
   "Your first step in the DeFi world": "您进入 DeFi 世界的第一步",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Web3 钱包允许您发送和接收比特币、BNB、ETH、NFT 等加密资产。",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Web3 钱包允许您发送和接收比特币、BNB、ETH、NFT 等加密资产。",
   "Login using a wallet connection": "使用钱包连接登录",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "无需为每个网站设置新帐户和密码，只需一次性设置您的钱包，并将其连接到您最喜欢的 DApp。",
   "Stake Error": "质押错误",
