--- a/apps/web/public/locales/zh-TW.json
+++ b/apps/web/public/locales/zh-TW.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "連線錯誤，請授權錢包存取。",
   "Retry": "再試一次",
   "Your first step in the DeFi world": "您進入 DeFi 世界的第一步",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Web3 錢包允許您收發比特幣、BNB、ETH、NFT 等加密資產。",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Web3 錢包允許您收發比特幣、BNB、ETH、NFT 等加密資產。",
   "Login using a wallet connection": "使用錢包連線登入",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "無需為每個網站設定新帳戶和密碼，錢包只需設定一次，再連線至您最喜歡的 DApp 即可。",
   "Stake Error": "質押錯誤",
