--- a/apps/web/public/locales/es-ES.json
+++ b/apps/web/public/locales/es-ES.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Error de conexión, autoriza el acceso al monedero.",
   "Retry": "Intentar de nuevo",
   "Your first step in the DeFi world": "Tu primer paso en el mundo de DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Un monedero Web3 te permite enviar y recibir criptoactivos como bitcoin, BNB, ETH, NFT y mucho más.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Un monedero Web3 te permite enviar y recibir criptoactivos como bitcoin, BNB, ETH, NFT y mucho más.",
   "Login using a wallet connection": "Inicia sesión con una conexión al monedero",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "En vez de configurar nuevas cuentas y contraseñas para cada sitio web, simplemente configura tu monedero desde el principio y conéctalo a tus DApps favoritas.",
   "Stake Error": "Error al invertir",
