--- a/apps/web/public/locales/fil-PH.json
+++ b/apps/web/public/locales/fil-PH.json
@@ -2030,7 +2030,7 @@
   "Error connecting, please authorize wallet to access.": "Nagkaroon ng error sa pagkonekta, pahintulutan ang wallet para ma-access.",
   "Retry": "Subukan Ulit",
   "Your first step in the DeFi world": "Ang unang hakbang mo sa mundo ng DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Nagbibigay-daan sa iyo ang Web3 Wallet na magpadala at makatanggap ng mga asset na crypto tulad ng bitcoin, BNB, ETH, mga NFT, at marami pang iba.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Nagbibigay-daan sa iyo ang Web3 Wallet na magpadala at makatanggap ng mga asset na crypto tulad ng bitcoin, BNB, ETH, mga NFT, at marami pang iba.",
   "Login using a wallet connection": "Mag-log in gamit ang koneksyon sa wallet",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Sa halip na mag-set up ng maga bagong account at password para sa bawat website, i-set up lang ang iyong wallet nang minsanan, at ikonekta ito sa mga paborito mong DApp.",
   "Stake Error": "Error sa Pag-stake",
