--- a/apps/web/public/locales/fr-FR.json
+++ b/apps/web/public/locales/fr-FR.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Erreur de connexion, veuillez autoriser l'accès au portefeuille.",
   "Retry": "Réessayer",
   "Your first step in the DeFi world": "Vos premiers pas dans le monde de la DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Un portefeuille Web3 vous permet d'envoyer et de recevoir des actifs cryptographiques tels que Bitcoin, BNB, ETH, TNT et bien plus encore.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Un portefeuille Web3 vous permet d'envoyer et de recevoir des actifs cryptographiques tels que Bitcoin, BNB, ETH, TNT et bien plus encore.",
   "Login using a wallet connection": "Connexion à l'aide d'un portefeuille",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Au lieu de configurer de nouveaux comptes et mots de passe pour chaque site Web, configurez simplement votre portefeuille une seule fois et connectez-le à vos applications DApps préférées.",
   "Stake Error": "Erreur de staking",
