--- a/apps/web/public/locales/id-ID.json
+++ b/apps/web/public/locales/id-ID.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Ada eror saat menghubungkan, harap izinkan dompet untuk mengakses.",
   "Retry": "Coba ulang",
   "Your first step in the DeFi world": "Langkah pertama Anda di dunia DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Dompet Web3 memungkinkan Anda untuk mengirimkan dan menerima aset kripto, seperti bitcoin, BNB, ETH, NFT, dan masih banyak lagi.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Dompet Web3 memungkinkan Anda untuk mengirimkan dan menerima aset kripto, seperti bitcoin, BNB, ETH, NFT, dan masih banyak lagi.",
   "Login using a wallet connection": "Masuk dengan menggunakan koneksi dompet",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Daripada mengatur akun dan kata sandi baru untuk setiap situs web, cukup atur dompet Anda sekaligus, dan hubungkan ke DApps faforit Anda.",
   "Stake Error": "Eror Saat Menumpuk",
