--- a/apps/web/public/locales/it-IT.json
+++ b/apps/web/public/locales/it-IT.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Errore durante la connessione, autorizza l'accesso al wallet.",
   "Retry": "Riprova",
   "Your first step in the DeFi world": "Il tuo primo passo nel mondo DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Un wallet Web3 ti consente di inviare e ricevere criptovalute come bitcoin, BNB, ETH, NFT e molto altro.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Un wallet Web3 ti consente di inviare e ricevere criptovalute come bitcoin, BNB, ETH, NFT e molto altro.",
   "Login using a wallet connection": "Accedi utilizzando una connessione wallet",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Invece di impostare nuovi account e password per ogni sito web, imposta semplicemente il tuo wallet una volta sola e collegalo alle tue DApp preferite.",
   "Stake Error": "Errore di stake",
