--- a/apps/web/public/locales/pt-BR.json
+++ b/apps/web/public/locales/pt-BR.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Erro ao conectar, autorize acesso à carteira.",
   "Retry": "Tentar novamente",
   "Your first step in the DeFi world": "Seu primeiro passo no mundo DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Uma Carteira Web3 permite que você envie e receba ativos de cripto como bitcoin, BNB, ETH, NFTs e vários outros.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Uma Carteira Web3 permite que você envie e receba ativos de cripto como bitcoin, BNB, ETH, NFTs e vários outros.",
   "Login using a wallet connection": "Faça login usando uma conexão de carteira",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Em vez de configurar novas contas e senhas para cada site, basta configurar sua carteira de uma vez e conectá-la em seu DApps favorito.",
   "Stake Error": "Erro de stake",
