--- a/apps/web/public/locales/ro-RO.json
+++ b/apps/web/public/locales/ro-RO.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Eroare de conectare, autorizează portofelul pentru acces.",
   "Retry": "Reîncearcă",
   "Your first step in the DeFi world": "Primul tău pas în lumea DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Un portofel Web3 îți permite să trimiți și să primești active cripto precum bitcoin, BNB, ETH, NFT și multe altele.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Un portofel Web3 îți permite să trimiți și să primești active cripto precum bitcoin, BNB, ETH, NFT și multe altele.",
   "Login using a wallet connection": "Conectează-te folosind o conexiune la portofel",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "În loc să setezi conturi sau parole noi pentru fiecare site web, configurează-ți portofelul din mers și conectează-l la aplicațiile DApps preferate.",
   "Stake Error": "Eroare de staking",
