--- a/apps/web/public/locales/uk-UA.json
+++ b/apps/web/public/locales/uk-UA.json
@@ -2038,7 +2038,7 @@
   "Error connecting, please authorize wallet to access.": "Помилка підключення. Налаштуйте доступ для гаманця.",
   "Retry": "Повторити спробу",
   "Your first step in the DeFi world": "Ваш перший крок у світ децентралізованих фінансів",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Гаманець Web3 дає змогу надсилати та отримувати такі криптоактиви, як BNB, ETH, невзаємозамінні токени та багато іншого.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Гаманець Web3 дає змогу надсилати та отримувати такі криптоактиви, як BNB, ETH, невзаємозамінні токени та багато іншого.",
   "Login using a wallet connection": "Вхід за допомогою підключеного гаманця",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Замість того, щоб створювати нові облікові записи та паролі для кожного вебсайта, просто налаштуйте гаманець і підключіть його до улюблених децентралізованих застосунків.",
   "Stake Error": "Помилка внесення",
