--- a/apps/web/public/locales/vi-VN.json
+++ b/apps/web/public/locales/vi-VN.json
@@ -669,7 +669,6 @@
   "Your Tickets": "Vé của bạn",
   "in prizes!": "giải thưởng!",
   "Tickets on sale soon": "Vé sắp được bán",
-  "The SweepStakes Lottery": "The SweepStakes Lottery",
   "All History": "Tất cả Lịch sử",
   "Winning Number": "Số thắng giải",
   "Prize pot": "Tổng giải thưởng",
@@ -2038,7 +2037,7 @@
   "Error connecting, please authorize wallet to access.": "Lỗi kết nối, vui lòng ủy quyền cho ví để truy cập.",
   "Retry": "Thử lại",
   "Your first step in the DeFi world": "Bước đầu tiên của bạn trong thế giới DeFi",
-  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, NFTs and much more.": "Một Ví Web3 cho phép bạn gửi và nhận các tài sản tiền mã hóa như bitcoin, BNB, ETH, NFT, v.v.",
+  "A Web3 Wallet allows you to send and receive crypto assets like bitcoin, BNB, ETH, and much more.": "Một Ví Web3 cho phép bạn gửi và nhận các tài sản tiền mã hóa như bitcoin, BNB, ETH, NFT, v.v.",
   "Login using a wallet connection": "Đăng nhập bằng một kết nối ví",
   "Instead of setting up new accounts and passwords for every website, simply set up your wallet in one go, and connect it to your favorite DApps.": "Thay vì thiết lập các tài khoản và mật khẩu mới cho mỗi website, hãy thiết lập ví của bạn một lần và kết nối nó với các DApp ưa thích của bạn.",
   "Stake Error": "Lỗi đặt cọc",
@@ -2773,7 +2772,7 @@
   "Liquidity Provision": "Liquidity Provision",
   "Governance": "Governance",
   "Unlock the Full Potential of DeFi with": "Unlock the Full Potential of DeFi with",
-  "Ecosystem": "Ecosystem",
+  "Ecosystem": "Hệ sinh thái",
   "Partners": "Partners",
   "Experience the power of community ownership, global governance, and explore infinite use cases within the SweepStakes ecosystem": "Experience the power of community ownership, global governance, and explore infinite use cases within the SweepStakes ecosystem",
   "Fund liquidity pools, earn trading fees": "Fund liquidity pools, earn trading fees",
@@ -2793,5 +2792,11 @@
   "Predict now": "Predict now",
   "Trade now": "Trade now",
 
-  "Earn rewards hassle-free with single-sided staking": "Earn rewards hassle-free with single-sided staking"
+  "Earn rewards hassle-free with single-sided staking": "Earn rewards hassle-free with single-sided staking",
+  "The SweepStakes Lottery": "Xổ số SweepStakes",
+  "An internal error was received.": "Gặp phải lỗi nội bộ.",
+  "All Winners": "Mọi người đều thắng",
+  "Match first %rewardBracket%": "Trùng %rewardBracket% số đầu tiên",
+  "Match all %rewardBracket%": "Trùng tất cả %rewardBracket% số",
+  "At least one ticket must be purchased": "Phải mua ít nhất một vé"
 }
