refactor(KlayPrice & buyKlay- Label & Link): link to baobab faucet if chain is baobab

--- a/apps/web/public/locales/vi-VN.json
+++ b/apps/web/public/locales/vi-VN.json
@@ -2798,5 +2798,6 @@
   "All Winners": "Mọi người đều thắng",
   "Match first %rewardBracket%": "Trùng %rewardBracket% số đầu tiên",
   "Match all %rewardBracket%": "Trùng tất cả %rewardBracket% số",
-  "At least one ticket must be purchased": "Phải mua ít nhất một vé"
+  "At least one ticket must be purchased": "Phải mua ít nhất một vé",
+  "Testnet KLAY Faucet": "Vòi KLAY Testnet"
 }
