--- a/apps/web/public/locales/ko-KR.json
+++ b/apps/web/public/locales/ko-KR.json
@@ -2798,5 +2798,6 @@
   "All Winners": "모두가 승자다",
   "Match first %rewardBracket%": "처음 %rewardBracket%개 숫자 일치",
   "Match all %rewardBracket%": "%rewardBracket%개 숫자 모두 일치",
-  "At least one ticket must be purchased": "최소 1장의 티켓을 구매해야 합니다."
+  "At least one ticket must be purchased": "최소 1장의 티켓을 구매해야 합니다.",
+  "Testnet KLAY Faucet": "KLAY 테스트넷 수도꼭지"
 }
