--- a/apps/web/public/locales/vi-VN.json
+++ b/apps/web/public/locales/vi-VN.json
@@ -2799,5 +2799,5 @@
   "Match first %rewardBracket%": "Trùng %rewardBracket% số đầu tiên",
   "Match all %rewardBracket%": "Trùng tất cả %rewardBracket% số",
   "At least one ticket must be purchased": "Phải mua ít nhất một vé",
-  "Testnet KLAY Faucet": "Vòi KLAY Testnet"
+  "Baobab Faucet (Free Testnet KLAY)": "Baobab Faucet (Miễn phí Testnet KLAY)"
 }
